[package]
name = "hungarian"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
bench = false

[dependencies]
nalgebra = { version = "0.33.0" }
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5.1"
nalgebra = { version = "0.33.0", features = ["rand"]}

[[bench]]
name = "benchmark"
harness = false
